[gd_scene format=3 uid="uid://cdx24aoy1dsci"]

[ext_resource type="Script" uid="uid://bb6r6ql8qpfub" path="res://scripts/characters/player.gd" id="1_pq8s5"]
[ext_resource type="Texture2D" uid="uid://b8olywfyfsjom" path="res://asset/Character/Piyama/Ekspresi Serra_20260131033905.png" id="2_7wym0"]
[ext_resource type="Texture2D" uid="uid://c7xp8nm2xc8sm" path="res://asset/Side Asset/Sapu/Untitled178_20260131082627.png" id="3_gj1sn"]
[ext_resource type="Texture2D" uid="uid://ni1vw1o0mpol" path="res://asset/Side Asset/Sapu/Untitled178_20260131082634.png" id="4_rpfb3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7wjm"]
size = Vector2(27, 45)

[sub_resource type="CircleShape2D" id="CircleShape2D_miirx"]
radius = 14.990009

[sub_resource type="Animation" id="Animation_pq8s5"]
resource_name = "CLEANING BARANG"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_7wym0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/things:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_gj1sn"), ExtResource("4_rpfb3")]
}

[sub_resource type="Animation" id="Animation_gin2a"]
resource_name = "CLEANING NODA"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/things:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_rpfb3"), ExtResource("3_gj1sn")]
}

[sub_resource type="Animation" id="Animation_m6phi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_7wym0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/things:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_gj1sn")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7n8ao"]
_data = {
&"CLEANING BARANG": SubResource("Animation_pq8s5"),
&"CLEANING NODA": SubResource("Animation_gin2a"),
&"RESET": SubResource("Animation_m6phi")
}

[sub_resource type="Gradient" id="Gradient_pq8s5"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gin2a"]
gradient = SubResource("Gradient_pq8s5")

[node name="Player" type="CharacterBody2D" unique_id=2026500027 groups=["Player"]]
collision_mask = 12
script = ExtResource("1_pq8s5")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1755841828]
position = Vector2(0, -9.799999)
scale = Vector2(0.03, 0.03)
texture = ExtResource("2_7wym0")
flip_h = true

[node name="things" type="Sprite2D" parent="Sprite2D" unique_id=1966095128]
position = Vector2(666.66675, 193.33325)
scale = Vector2(0.5325521, 0.5325521)
texture = ExtResource("3_gj1sn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1101704533]
position = Vector2(0.5, -10.5)
shape = SubResource("RectangleShape2D_j7wjm")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1350848883]
position = Vector2(0, -9.799999)

[node name="pivot" type="Node2D" parent="." unique_id=2083549413]
position = Vector2(9.536743e-07, -10)

[node name="Interactions" type="Area2D" parent="pivot" unique_id=1952125279]
position = Vector2(35.01, 0)
scale = Vector2(0.99999994, 0.99999994)
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/Interactions" unique_id=1399716977]
scale = Vector2(0.99999964, 0.99999934)
shape = SubResource("CircleShape2D_miirx")

[node name="HoldPosition" type="Marker2D" parent="." unique_id=2043182497]
position = Vector2(16, 0)
scale = Vector2(1, 0.52000004)

[node name="DropPosition" type="Marker2D" parent="." unique_id=99708494]
position = Vector2(26, 0)
scale = Vector2(1, 0.52000004)

[node name="HUD" type="CanvasLayer" parent="." unique_id=2031447585]

[node name="Screen" type="Control" parent="HUD" unique_id=2055082474]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Day Counter" type="Label" parent="HUD/Screen" unique_id=924471142]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -35.0
offset_right = -15.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
text = "DAY COUNTER"

[node name="anim" type="AnimationPlayer" parent="." unique_id=1822031063]
libraries/ = SubResource("AnimationLibrary_7n8ao")

[node name="TimerCleansing" type="Timer" parent="." unique_id=1699654721]
wait_time = 0.1

[node name="CleansingProgress" type="TextureProgressBar" parent="." unique_id=204016250]
offset_left = -9.615385
offset_top = -24.0
offset_right = 9.615385
offset_bottom = -22.0
step = 0.01
fill_mode = 6
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_gin2a")

[connection signal="area_entered" from="pivot/Interactions" to="." method="_on_interactions_area_entered"]
[connection signal="area_exited" from="pivot/Interactions" to="." method="_on_interactions_area_exited"]
[connection signal="body_entered" from="pivot/Interactions" to="." method="_on_interactions_body_entered"]
[connection signal="body_exited" from="pivot/Interactions" to="." method="_on_interactions_body_exited"]
[connection signal="timeout" from="TimerCleansing" to="." method="_on_timer_timeout"]
